# cosmo

./: .gitignore  AGENTS.md  Cargo.toml  README.md
_improvement_plan/: refactoring_walkthrough.md  rust_improvements.md
docs/: sinks.md
examples/: pass_through.yaml  pois_annotated.yaml  pois_simple.yaml  roads.yaml
fixture/: library_square.osm.pbf
src/: main.rs  metadata.rs  utils.rs
src/app/: mod.rs
src/config/: mod.rs
src/dsl/: ast.rs  eval.rs  lexer.rs  mod.rs  parser.rs
src/expr/: cel.rs  mod.rs
src/mapping/: mod.rs  rules.rs
src/pipeline/: mod.rs
src/sinks/: geojson.rs  geojsonl.rs  geoparquet.rs  mod.rs
src/storage/: mod.rs
tests/: pass_through_integration.rs  pbf_integration.rs
